WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187101
Cookie API: cookie creation time is wrong
https://bugs.webkit.org/show_bug.cgi?id=187101
Summary
Cookie API: cookie creation time is wrong
Sihui Liu
Reported
2018-06-27 09:48:07 PDT
Using WKHTTPCookieStore getAllCookies and printing cookie's detail, we could see the creation time of cookies are in the future like "2049-06-26".
Attachments
Patch
(4.88 KB, patch)
2018-06-27 10:12 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews205 for win-future
(12.80 MB, application/zip)
2018-06-27 12:06 PDT
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2018-06-27 10:12:32 PDT
Created
attachment 343718
[details]
Patch
Geoffrey Garen
Comment 2
2018-06-27 11:31:53 PDT
Comment on
attachment 343718
[details]
Patch r=me
EWS Watchlist
Comment 3
2018-06-27 12:05:53 PDT
Comment on
attachment 343718
[details]
Patch
Attachment 343718
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8360506
New failing tests: http/tests/security/contentSecurityPolicy/video-with-https-url-allowed-by-csp-media-src-star.html
EWS Watchlist
Comment 4
2018-06-27 12:06:04 PDT
Created
attachment 343735
[details]
Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Sihui Liu
Comment 5
2018-06-28 09:37:01 PDT
Comment on
attachment 343718
[details]
Patch The failure is irrelevant to the patch.
WebKit Commit Bot
Comment 6
2018-06-28 10:03:30 PDT
Comment on
attachment 343718
[details]
Patch Clearing flags on attachment: 343718 Committed
r233308
: <
https://trac.webkit.org/changeset/233308
>
WebKit Commit Bot
Comment 7
2018-06-28 10:03:31 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-06-28 10:05:17 PDT
<
rdar://problem/41586686
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug