Cookie API: cookie creation time is wrong https://bugs.webkit.org/show_bug.cgi?id=187101

Reviewed by Geoffrey Garen.

Source/WebCore:

Covered by API test: WebKit.WKHTTPCookieStoreCreationTime.

* platform/network/cocoa/CookieCocoa.mm:
(WebCore::Cookie::operator NSHTTPCookie * _Nullable  const):

Tools:

Add test coverage: make sure the cookie creation time returned is the same as set.

* TestWebKitAPI/Tests/WebKitCocoa/WKHTTPCookieStore.mm:
(TEST):


Canonical link: https://commits.webkit.org/202395@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233308 268f45cc-cd09-0410-ab3c-d52691b4dbfc